<resources>

    <!--Global-->
    <string name="app_name">Lumi</string>


    <!--Login Screen-->
    <string name="User_Name_Entry">User Name</string>
    <string name="Password_Entry">Password</string>
    <string name="login">Log In</string>
    <string name="register_id">Register Lumi ID</string>
    <string name="name_hint">Enter Lumi ID</string>
    <string name="pass_hint">Enter Password</string>

    <string name="user_name">%1$s</string>
    <string name="password">%1$s</string>
    <string name="langSetting">Language</string>
    <string name="aboutSetting">About</string>
    <string name="notifSetting">Notifications</string>

    <string name="remember_me">Remember Username</string>
    <string name="creds">Invalid Credentials</string>

    <string-array name="lang_array">
        <item>English</item>
        <item>French</item>
    </string-array>

    <!--Register Screen-->
    <string name="register_title">Registration Screen</string>
    <string name="register_header">Register your Lumi using the serial number located on the bottom of the product</string>
    <string name="lumi_serial">Lumi Serial Number</string>
    <string name="lumi_password">New Password</string>
    <string name="lumi_password_confirm">Confirm Password</string>
    <string name="confirm_reg">Confirm</string>

    <string name="lumi_no_sn">Enter Lumi Serial Number</string>
    <string name="lumi_not_full">Enter the Full 9 Digit Lumi Serial Number</string>
    <string name="pass_empty">Password Field Cannot Be Empty</string>
    <string name="pass_not_match">Passwords Must Match</string>
    <string name="invalid_lumi">Invalid Lumi Serial Number</string>

    <!--Main Menu Screen-->
    <string-array name="user_list">
        <item>Choose User</item>
    </string-array>

    <string name="logged_toast">Logged in as\u0020</string>
    <string name="need_user">Choose A User before continuing</string>

    <string name="add_user">Add User</string>
    <string name="userfield_error">Username Field Cannot Be Empty</string>
    <string name="userfield_short">Username Must Be Minimum 3 Characters</string>

    <!--Baby Menu Screen-->
    <string name="mybaby">myBaby</string>
    <string name="automode">auto mode</string>
    <string name="automode_description">applying this mode allows lumi to automatically sense when light is needed</string>

    <string name="cryingmode">crying mode</string>
    <string name="cryingmode_description">applying this mode allows lumi to automatically alert the app, as well as display a customized lamp brightness and color setting</string>
    <string name="adjustpref">adjust sensitivity</string>

    <string name="name_error">You did not enter a Name</string>
    <string name="password_error">You did not enter a Password</string>

    <string name="lullabies">lullabies</string>

    <string-array name="song_list">
        <item>Choose Song</item>
        <item>Rock a bye baby</item>
        <item>Twinkle Twinkle</item>
    </string-array>

    <string name="rockabye_song">Rock a bye baby</string>
    <string name="twinkle_song">Twinkle Twinkle</string>
    <string name="lightReader">Light Reading</string>

    <string name="trigger_light_low">Low light detected. Lumi Lights ON</string>
    <string name="trigger_light_high">High light detected. Lumi Lights OFF</string>

    <!--Message Board-->
    <string name="sendButton">Send</string>
    <string name="type_message_hint">Type Message</string>
    <string name="messageboard_header">Message Board</string>

    <!--Settings-->
    <string name="titleSetting">Settings</string>

    <!--Color Menu-->
    <string-array name="led_list">
        <item>Choose LED Pattern</item>
        <item>Color Wipe</item>
        <item>Theatre Chase</item>
        <item>Rainbow</item>
        <item>Rainbow Cycle</item>
        <item>Theatre Chase Rainbow</item>
    </string-array>

    <!--Timer Menu-->
    <string name="startButton">Start</string>
    <string name="timerDefault">00:00</string>
    <string name="setButton">Set</string>
    <string name="stop_timer">Stop</string>
    <string name="reset_timer">Reset</string>
    <string name="resumeButton">Resume</string>
    <string name="set_the_timer">Set the Timer</string>
    <string name="set">Set</string>
    <string name="minutes">Minutes</string>
    <string name="add">Add</string>
    <string name="timerOver">Timer\'s done!</string>
    <string name="cancel">Cancel</string>
    <string name="timerDone">Timer is done!</string>
    <string name="timerDoneTitle">Hey! Wake up!</string>
    <string name="addpresetTimer">Add New Preset</string>
    <string name="setTimerTitle">Set Timer</string>
    <string name="notifOn">Notifications are now on!</string>
    <string name="notifOff">Notifications are off!</string>

    <string-array name="timerPresets">
        <item>.5</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>

</resources>
