<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lumi_bg"
    tools:context="arkstudios.lumiapp.BabyMenu">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1">
            </TableLayout>

    <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:orientation="vertical"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintTop_creator="1">


        <TextView
            android:id="@+id/textView4"
            style="@style/TextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/automode"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/automode_description"
            android:textSize="14sp"
            android:textStyle="bold" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:switchMinWidth="70dp" />

        <TextView
            android:id="@+id/light"
            style="@style/TextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lightReader"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cryingmode"
            android:textSize="20sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cryingmode_description"
        android:textSize="14sp"
        android:textStyle="bold" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:switchMinWidth="70dp" />

        <TextView
            android:id="@+id/adjust_sens"
            style="@style/TextViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjustpref"
            android:textSize="14sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>