<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lumi_bg"
    tools:context="arkstudios.lumiapp.SettingsMenu">



    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:onClick="menuButtonClicked"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/circle_blue"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="colorButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton9"
        app:srcCompat="@drawable/color_palette"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="settingsButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton3"
        app:srcCompat="@drawable/setting"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:onClick="babyButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/baby"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:onClick="notificationsButtonClicked"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton8"
        app:srcCompat="@drawable/notifications"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:onClick="timerButtonClicked"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintRight_toLeftOf="@+id/imageButton6"
        app:srcCompat="@drawable/timer1"
        android:layout_marginEnd="8dp" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/titleSetting" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textSettings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/notifSetting"
                android:onClick="notificationsButtonClicked"/>

            <Switch
                android:id="@+id/notifSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@id/textSettings2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/langSetting"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/lang_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/lang_array" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@id/textSettings3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/aboutSetting"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />



        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
